syntax = "proto3";

option csharp_namespace = "EmulatorRC.Client.Protos";

service Screener {
  rpc Connect (stream ScreenRequest) returns (stream ScreenReply);
}

message ScreenRequest {
  string id = 1;
}

message ScreenReply {
    string id = 1;
    bytes image = 2;
}
